<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/action_bar_height"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Блок управления месяцем -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/previous_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_prev_month"
            android:contentDescription="Предыдущий месяц"
            app:tint="@color/orange_700"/>

        <TextView
            android:id="@+id/month_year_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/orange_900"/>

        <ImageButton
            android:id="@+id/next_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_next_month"
            app:tint="@color/orange_700"
            android:contentDescription="Следующий месяц"/>
    </LinearLayout>

    <!-- Дни недели -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:rowCount="1"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/orange_900"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/orange_900"/>
    </GridLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Календарь -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <!-- Поле плана -->
        <TextView
            android:id="@+id/tv_workout_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"/>

    </LinearLayout>
</LinearLayout>
